Phase-2/fl/FunctionCraftParser.java
// Generated from C:/Users/ASUS/Desktop/github-clones/Compiler-Course-Projects-S2024/Phase-1/FunctionCraft/src/main/grammar/FunctionCraft.g4 by ANTLR 4.13.1
package fl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FunctionCraftParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ARROW=1, DECREMENT=2, CONCAT=3, LEQ=4, LES=5, GEQ=6, GTR=7, MULTI_LINE_COMMENT=8, 
		EQL=9, ASSIGN=10, NEQ=11, NOT=12, AND=13, OR=14, INCREMENT=15, PLUS_ASSIGN=16, 
		PLUS=17, MINUS_ASSIGN=18, MINUS=19, MULT_ASSIGN=20, MULT=21, DIV_ASSIGN=22, 
		DIV=23, MOD_ASSIGN=24, MOD=25, BREAK_IF=26, BREAK=27, CHOP=28, CHOMP=29, 
		DEF=30, ELSEIF=31, ELSE=32, END=33, FALSE=34, FOR=35, IF=36, IN=37, MAIN=38, 
		MATCH=39, METHOD=40, NEXT_IF=41, NEXT=42, PATTERN=43, PUTS=44, PUSH=45, 
		RETURN=46, TRUE=47, LEN=48, LOOP_DO=49, PATTERN_INDENT=50, LBRACE=51, 
		RBRACE=52, LBRACKET=53, RBRACKET=54, LPAR=55, RPAR=56, RANGE_OP=57, DOT=58, 
		COMMA=59, COLON=60, SEMICOLON=61, FLOAT_VAL=62, INT_VAL=63, STR_VAL=64, 
		ID=65, SINGLE_LINE_COMMENT=66, WS=67;
	public static final int
		RULE_program = 0, RULE_body = 1, RULE_function = 2, RULE_return_statement = 3, 
		RULE_main = 4, RULE_comment = 5, RULE_required_parameter = 6, RULE_optional_parameter = 7, 
		RULE_function_parameter = 8, RULE_pattern_clause = 9, RULE_pattern_matching = 10, 
		RULE_break_statement = 11, RULE_next_statement = 12, RULE_loop_body = 13, 
		RULE_loop_do = 14, RULE_rangeOp = 15, RULE_for_in = 16, RULE_if_statement = 17, 
		RULE_else_if_statement = 18, RULE_else_statement = 19, RULE_conditional_expression = 20, 
		RULE_if_statement_in_loop = 21, RULE_else_if_statement_in_loop = 22, RULE_else_statement_in_loop = 23, 
		RULE_conditional_expression_in_loop = 24, RULE_puts = 25, RULE_len = 26, 
		RULE_push = 27, RULE_chop = 28, RULE_chomp = 29, RULE_function_ptr = 30, 
		RULE_for_range = 31, RULE_numeric_literal = 32, RULE_string_literal = 33, 
		RULE_bool_literal = 34, RULE_list_literal = 35, RULE_literal = 36, RULE_lambda_function = 37, 
		RULE_condition_clause = 38, RULE_args = 39, RULE_assignment_op = 40, RULE_assignment = 41, 
		RULE_function_call = 42, RULE_function_call_suffix = 43, RULE_factor = 44, 
		RULE_factor_suffix = 45, RULE_term_op = 46, RULE_arithmetic_term = 47, 
		RULE_arithmetic_sum = 48, RULE_arithmetic_expr = 49, RULE_relational_op = 50, 
		RULE_compare_expr = 51, RULE_equality_expr = 52, RULE_logical_expr = 53, 
		RULE_append_expr = 54, RULE_expression = 55, RULE_statement = 56, RULE_statement_in_loop = 57, 
		RULE_built_in_function = 58;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "body", "function", "return_statement", "main", "comment", 
			"required_parameter", "optional_parameter", "function_parameter", "pattern_clause", 
			"pattern_matching", "break_statement", "next_statement", "loop_body", 
			"loop_do", "rangeOp", "for_in", "if_statement", "else_if_statement", 
			"else_statement", "conditional_expression", "if_statement_in_loop", "else_if_statement_in_loop", 
			"else_statement_in_loop", "conditional_expression_in_loop", "puts", "len", 
			"push", "chop", "chomp", "function_ptr", "for_range", "numeric_literal", 
			"string_literal", "bool_literal", "list_literal", "literal", "lambda_function", 
			"condition_clause", "args", "assignment_op", "assignment", "function_call", 
			"function_call_suffix", "factor", "factor_suffix", "term_op", "arithmetic_term", 
			"arithmetic_sum", "arithmetic_expr", "relational_op", "compare_expr", 
			"equality_expr", "logical_expr", "append_expr", "expression", "statement", 
			"statement_in_loop", "built_in_function"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'->'", "'--'", "'<<'", "'<='", "'<'", "'>='", "'>'", null, "'=='", 
			"'='", "'!='", "'!'", "'&&'", "'||'", "'++'", "'+='", "'+'", "'-='", 
			"'-'", "'*='", "'*'", "'/='", "'/'", "'%='", "'%'", "'break if'", "'break'", 
			"'chop'", "'chomp'", "'def'", "'elseif'", "'else'", "'end'", "'false'", 
			"'for'", "'if'", "'in'", "'main'", "'match'", "'method'", "'next if'", 
			"'next'", "'pattern'", "'puts'", "'push'", "'return'", "'true'", "'Len'", 
			"'loop do'", null, "'{'", "'}'", "'['", "']'", "'('", "')'", null, "'.'", 
			"','", "':'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ARROW", "DECREMENT", "CONCAT", "LEQ", "LES", "GEQ", "GTR", "MULTI_LINE_COMMENT", 
			"EQL", "ASSIGN", "NEQ", "NOT", "AND", "OR", "INCREMENT", "PLUS_ASSIGN", 
			"PLUS", "MINUS_ASSIGN", "MINUS", "MULT_ASSIGN", "MULT", "DIV_ASSIGN", 
			"DIV", "MOD_ASSIGN", "MOD", "BREAK_IF", "BREAK", "CHOP", "CHOMP", "DEF", 
			"ELSEIF", "ELSE", "END", "FALSE", "FOR", "IF", "IN", "MAIN", "MATCH", 
			"METHOD", "NEXT_IF", "NEXT", "PATTERN", "PUTS", "PUSH", "RETURN", "TRUE", 
			"LEN", "LOOP_DO", "PATTERN_INDENT", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
			"LPAR", "RPAR", "RANGE_OP", "DOT", "COMMA", "COLON", "SEMICOLON", "FLOAT_VAL", 
			"INT_VAL", "STR_VAL", "ID", "SINGLE_LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FunctionCraft.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FunctionCraftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public List<Pattern_matchingContext> pattern_matching() {
			return getRuleContexts(Pattern_matchingContext.class);
		}
		public Pattern_matchingContext pattern_matching(int i) {
			return getRuleContext(Pattern_matchingContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(121);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case DEF:
						{
						setState(118);
						function();
						}
						break;
					case MULTI_LINE_COMMENT:
					case SINGLE_LINE_COMMENT:
						{
						setState(119);
						comment();
						}
						break;
					case PATTERN:
						{
						setState(120);
						pattern_matching();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(125);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(126);
			main();
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MULTI_LINE_COMMENT || _la==SINGLE_LINE_COMMENT) {
				{
				{
				setState(127);
				comment();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public Return_statementContext return_statement() {
			return getRuleContext(Return_statementContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -4565610862600515326L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 7L) != 0)) {
				{
				setState(135);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ARROW:
				case NOT:
				case MINUS:
				case CHOP:
				case CHOMP:
				case FALSE:
				case FOR:
				case IF:
				case METHOD:
				case PUTS:
				case PUSH:
				case TRUE:
				case LEN:
				case LOOP_DO:
				case LBRACKET:
				case LPAR:
				case FLOAT_VAL:
				case INT_VAL:
				case STR_VAL:
				case ID:
					{
					setState(133);
					statement();
					}
					break;
				case MULTI_LINE_COMMENT:
				case SINGLE_LINE_COMMENT:
					{
					setState(134);
					comment();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN) {
				{
				setState(140);
				return_statement();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public Token name;
		public TerminalNode DEF() { return getToken(FunctionCraftParser.DEF, 0); }
		public TerminalNode LPAR() { return getToken(FunctionCraftParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(FunctionCraftParser.RPAR, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode END() { return getToken(FunctionCraftParser.END, 0); }
		public TerminalNode ID() { return getToken(FunctionCraftParser.ID, 0); }
		public Function_parameterContext function_parameter() {
			return getRuleContext(Function_parameterContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(DEF);
			setState(144);
			((FunctionContext)_localctx).name = match(ID);
			 System.out.println("FuncDec: " + (((FunctionContext)_localctx).name!=null?((FunctionContext)_localctx).name.getText():null)); 
			setState(146);
			match(LPAR);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACKET || _la==ID) {
				{
				setState(147);
				function_parameter();
				}
			}

			setState(150);
			match(RPAR);
			setState(151);
			body();
			setState(152);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Return_statementContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(FunctionCraftParser.RETURN, 0); }
		public TerminalNode SEMICOLON() { return getToken(FunctionCraftParser.SEMICOLON, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Return_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterReturn_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitReturn_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitReturn_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Return_statementContext return_statement() throws RecognitionException {
		Return_statementContext _localctx = new Return_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_return_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(RETURN);
			 System.out.println("RETURN"); 
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -4566173915633151998L) != 0) || _la==STR_VAL || _la==ID) {
				{
				setState(156);
				expression();
				}
			}

			setState(159);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(FunctionCraftParser.DEF, 0); }
		public TerminalNode MAIN() { return getToken(FunctionCraftParser.MAIN, 0); }
		public TerminalNode LPAR() { return getToken(FunctionCraftParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(FunctionCraftParser.RPAR, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode END() { return getToken(FunctionCraftParser.END, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(DEF);
			setState(162);
			match(MAIN);
			 System.out.println("MAIN"); 
			setState(164);
			match(LPAR);
			setState(165);
			match(RPAR);
			setState(166);
			body();
			setState(167);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommentContext extends ParserRuleContext {
		public TerminalNode SINGLE_LINE_COMMENT() { return getToken(FunctionCraftParser.SINGLE_LINE_COMMENT, 0); }
		public TerminalNode MULTI_LINE_COMMENT() { return getToken(FunctionCraftParser.MULTI_LINE_COMMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitComment(this);
			else return visitor.visitChildren(this);
		}
	}
